# ribresci

./: README.md
20_Push_swap/: pushSwap.txt
20_Push_swap/push_swap/: Makefile  atoi.c  checks.c  checks2.c  chunk_sort.c  list_utils1.c  list_utils2.c  manual_sort.c  manual_sort_utils.c  operations.c  operations2.c  printf_utils.c  printf_utils1.c  printf_utils2.c  push_swap.c  push_swap.h  radix_sort.c  split.c
21_Python/Python6/: ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_1.py  ft_kaboom.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation.py
21_Python/Python7/: battle.py  capacitor.py  tournament.py
22_A-Maze-Ing/: Makefile  README.md  TODO.xtx  a_maze_ing.py  output_maze.txt  pyproject.toml
22_A-Maze-Ing/config/: config.txt
22_A-Maze-Ing/mazegenerator/: generator.py  solver.py
22_A-Maze-Ing/renderer/: __init__.py  data.txt  output_file_renderer.py
A-Maze-Ing/: a_maze_ing.py
A-Maze-Ing/config/: config.txt
A-Maze-Ing/mazegenerator/: __init__.py  generator.py  solver.py
A-Maze-Ing/renderer/: data.txt  output_file_renderer.py
Libft_Aggiornato/: README.md  ft_isdigit.c  ft_itoa.c  ft_memchr.c  ft_printf.c  ft_putchar_fd.c  ft_split.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
Milestone0/Libft/Libft/: libft.h  (+20 more)
Milestone0/Libft_Aggiornato/: Makefile  ft_atoi.c  ft_calloc.c  ft_isprint.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstlast.c  ft_memcmp.c  ft_memset.c  ft_print_hex.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strtrim.c
(+114 files in other folders)
